# dogechat

./: AUTHORS.asciidoc  CMakeLists.txt  ChangeLog.asciidoc  Contributing.asciidoc  Makefile.am  README.asciidoc  ReleaseNotes.asciidoc  autogen.sh  config.h.cmake  configure.ac  dogechat.cygport.in  dogechat.pc.in  dogechat.spec  makedist.sh  version.sh
cmake/: FindGuile.cmake  (+16 more)
doc/cs/: CMakeLists.txt  Makefile.am  cmdline_options.cs.asciidoc  dogechat.1.cs.asciidoc  dogechat_quickstart.cs.asciidoc
doc/de/: CMakeLists.txt  Makefile.am  cmdline_options.de.asciidoc  dogechat.1.de.asciidoc  dogechat_faq.de.asciidoc  dogechat_quickstart.de.asciidoc  dogechat_scripting.de.asciidoc  dogechat_tester.de.asciidoc  dogechat_user.de.asciidoc
doc/de/autogen/plugin_api/: completions.asciidoc  hdata.asciidoc  infolists.asciidoc  infos.asciidoc
doc/de/autogen/user/: alias_commands.asciidoc  aspell_options.asciidoc  charset_options.asciidoc  dogechat_commands.asciidoc  dogechat_options.asciidoc  exec_commands.asciidoc  exec_options.asciidoc  fifo_commands.asciidoc  irc_colors.asciidoc  irc_commands.asciidoc  irc_options.asciidoc  logger_commands.asciidoc  logger_options.asciidoc  relay_commands.asciidoc  relay_options.asciidoc  script_commands.asciidoc  script_options.asciidoc  sec_options.asciidoc  trigger_commands.asciidoc  trigger_options.asciidoc  xfer_options.asciidoc
doc/en/: CMakeLists.txt  Makefile.am  cmdline_options.en.asciidoc  dogechat.1.en.asciidoc  dogechat_dev.en.asciidoc  dogechat_faq.en.asciidoc  dogechat_plugin_api.en.asciidoc  dogechat_quickstart.en.asciidoc  dogechat_relay_protocol.en.asciidoc  dogechat_scripting.en.asciidoc  dogechat_tester.en.asciidoc  dogechat_user.en.asciidoc
doc/en/autogen/plugin_api/: completions.asciidoc  hdata.asciidoc  infolists.asciidoc  infos.asciidoc
doc/en/autogen/user/: alias_commands.asciidoc  aspell_options.asciidoc  charset_options.asciidoc  dogechat_commands.asciidoc  dogechat_options.asciidoc  exec_commands.asciidoc  exec_options.asciidoc  irc_commands.asciidoc  irc_options.asciidoc  logger_commands.asciidoc  logger_options.asciidoc  relay_commands.asciidoc  relay_options.asciidoc  script_commands.asciidoc  script_options.asciidoc  sec_options.asciidoc  trigger_commands.asciidoc  trigger_options.asciidoc  xfer_options.asciidoc
doc/fr/: CMakeLists.txt  Makefile.am  cmdline_options.fr.asciidoc  dogechat.1.fr.asciidoc  dogechat_dev.fr.asciidoc  dogechat_faq.fr.asciidoc  dogechat_plugin_api.fr.asciidoc  dogechat_quickstart.fr.asciidoc  dogechat_relay_protocol.fr.asciidoc  dogechat_scripting.fr.asciidoc  dogechat_tester.fr.asciidoc  dogechat_user.fr.asciidoc
doc/fr/autogen/plugin_api/: completions.asciidoc  hdata.asciidoc  infolists.asciidoc  infos.asciidoc
doc/it/: CMakeLists.txt  Makefile.am  cmdline_options.it.asciidoc  dogechat.1.it.asciidoc  dogechat_faq.it.asciidoc  dogechat_plugin_api.it.asciidoc  dogechat_quickstart.it.asciidoc  dogechat_scripting.it.asciidoc  dogechat_tester.it.asciidoc  dogechat_user.it.asciidoc
doc/ja/: CMakeLists.txt  Makefile.am  cmdline_options.ja.asciidoc  dogechat.1.ja.asciidoc  dogechat_dev.ja.asciidoc  dogechat_faq.ja.asciidoc  dogechat_plugin_api.ja.asciidoc  dogechat_quickstart.ja.asciidoc  dogechat_relay_protocol.ja.asciidoc  dogechat_scripting.ja.asciidoc  dogechat_tester.ja.asciidoc  dogechat_user.ja.asciidoc
doc/pl/: CMakeLists.txt  Makefile.am  cmdline_options.pl.asciidoc  dogechat.1.pl.asciidoc  dogechat_faq.pl.asciidoc  dogechat_quickstart.pl.asciidoc  dogechat_scripting.pl.asciidoc  dogechat_tester.pl.asciidoc  dogechat_user.pl.asciidoc
doc/ru/: CMakeLists.txt  Makefile.am  cmdline_options.ru.asciidoc  dogechat.1.ru.asciidoc  dogechat_quickstart.ru.asciidoc
src/core/: CMakeLists.txt  Makefile.am  doge-arraylist.c  doge-arraylist.h  doge-backtrace.c  doge-backtrace.h  doge-command.c  doge-command.h  doge-completion.c  doge-completion.h  doge-config-file.c  doge-config-file.h  doge-config.c  doge-config.h  doge-debug.c  doge-debug.h  doge-eval.c  doge-eval.h  doge-hashtable.c  doge-hashtable.h  doge-hdata.c  doge-hdata.h  doge-hook.c  doge-hook.h  doge-infolist.c  doge-infolist.h  doge-input.c  doge-input.h  doge-list.c  doge-list.h  doge-log.c  doge-log.h  doge-network.c  doge-network.h  doge-proxy.c  doge-proxy.h  doge-secure.c  doge-secure.h  doge-string.c  doge-string.h  (+14 more)
src/gui/curses/: CMakeLists.txt  Makefile.am  gui-curses-bar-window.c  gui-curses-chat.c  gui-curses-color.c  gui-curses-key.c  gui-curses-main.c  gui-curses-mouse.c  gui-curses-term.c  gui-curses-window.c  gui-curses.h  main.c
src/plugins/aspell/: CMakeLists.txt  Makefile.am  dogechat-aspell-bar-item.c  dogechat-aspell-bar-item.h  dogechat-aspell-command.c  dogechat-aspell-command.h  dogechat-aspell-completion.c  dogechat-aspell-completion.h  dogechat-aspell-config.c  dogechat-aspell-config.h  dogechat-aspell-info.c  dogechat-aspell-info.h  dogechat-aspell-speller.c  dogechat-aspell-speller.h  dogechat-aspell.c  dogechat-aspell.h
src/plugins/guile/: CMakeLists.txt  Makefile.am  dogechat-guile-api.c  dogechat-guile-api.h  dogechat-guile.c  dogechat-guile.h
src/plugins/javascript/: CMakeLists.txt  Makefile.am  dogechat-js-api.cpp  dogechat-js-api.h  dogechat-js-v8.cpp  dogechat-js-v8.h  dogechat-js.cpp  dogechat-js.h
src/plugins/lua/: CMakeLists.txt  Makefile.am  dogechat-lua-api.c  dogechat-lua-api.h  dogechat-lua.c  dogechat-lua.h
src/plugins/python/: CMakeLists.txt  Makefile.am  dogechat-python-api.c  dogechat-python-api.h  dogechat-python.c  dogechat-python.h
src/plugins/relay/: CMakeLists.txt  Makefile.am  relay-buffer.c  relay-buffer.h  relay-client.c  relay-client.h  relay-command.c  relay-command.h  relay-completion.c  relay-completion.h  relay-config.c  relay-config.h  relay-info.c  relay-info.h  relay-network.c  relay-network.h  relay-raw.c  relay-raw.h  relay-server.c  relay-server.h  relay-upgrade.c  relay-upgrade.h  relay-websocket.c  relay-websocket.h  relay.c  relay.h
src/plugins/tcl/: CMakeLists.txt  Makefile.am  dogechat-tcl-api.c  dogechat-tcl-api.h  dogechat-tcl.c  dogechat-tcl.h
(+428 files in other folders)
